# Colophon

./: .gitignore  README.md  docker-compose.yml  init.sql  pyproject.toml
corpus/: 1012.analysis.json  11.analysis.json  120.analysis.json  12242.analysis.json  1232.analysis.json  1322.analysis.json  1342.analysis.json  13951.analysis.json  1400.analysis.json  14155.analysis.json  158.analysis.json  1661.analysis.json  174.analysis.json  17489.analysis.json  205.analysis.json  209.analysis.json  2147.analysis.json  215.analysis.json  2229.analysis.json  23.analysis.json  2376.analysis.json  2554.analysis.json  2591.analysis.json  2701.analysis.json  2833.analysis.json  28850.analysis.json  35.analysis.json  36.analysis.json  3726.analysis.json  408.analysis.json  514.analysis.json  54829.analysis.json  55752.analysis.json  68283.analysis.json  7178.analysis.json  76.analysis.json  844.analysis.json  910.analysis.json  98.analysis.json
scripts/: build_corpus.py
src/colophon/: __init__.py  __main__.py  cli.py
src/colophon/analysis/: __init__.py  chunked.py  contractions.py  dialogue.py  function_words.py  merge.py  ngrams.py  openers.py  paragraphs.py  pipeline.py  pos.py  punctuation.py  readability.py  sentence.py  syntax.py  vocabulary.py
src/colophon/comparison/: __init__.py  burrows_delta.py
src/colophon/db/: __init__.py  operations.py  schema.py
src/colophon/embeddings/: __init__.py  vectorize.py
src/colophon/ingestion/: __init__.py  epub.py  normalize.py  ocr.py  pdf.py  text.py
src/colophon/lang/: __init__.py
src/colophon/models/: __init__.py  document.py  features.py
src/colophon/reporting/: __init__.py  html.py  (+2 more)
(+15 files in other folders)
